@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-03-01 mmichaud <michael.michaud@free.fr>
+  * fix a problem with shapefilewriter and the use of 
+    overrideWithExistingCompatibleDbfFieldDef(patch from Larry Becker)
+
 2013-02-24 mmichaud <michael.michaud@free.fr>
   * fix 1447907 : upgrade jdom.jar (1.0b8) to jdom-1.1.3.jar
   * fix 1472782 : date is now shown with time in attribute table. It is 
